jQuery features & Ajax request for prices

--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -12,7 +12,7 @@
     <header class="showcase">
         <div class="showcase-top">
             <img src="https://i.ibb.co/r5krrdz/logo.png" alt="" />
-            <a href="#" class="btn btn-rounded">Sign In</a>
+            <a href="../login.html" class="btn btn-rounded">Sign In</a>
         </div>
         <div class="showcase-content">
             <h1>See what's next</h1>
@@ -117,11 +117,11 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
+                        <tr id="Prices">
                             <td>Monthly price after free month ends on 6/19/19</td>
-                            <td>$8.99</td>
-                            <td>$12.99</td>
-                            <td>$15.99</td>
+                            <td id="Basic"></td>
+                            <td id="Standard"></td>
+                            <td id="Premium"></td>
                         </tr>
                         <tr>
                             <td>HD Available</td>
@@ -202,6 +202,9 @@
 
     </footer>
 </body>
+
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 <script src="script.js"></script>
+<script src="AjaxScript.js"></script>
 </html>
 
